Commented static html+css for better understanding

--- a/static/hf.css
+++ b/static/hf.css
@@ -1,3 +1,5 @@
+/* Style for html pages and prompts and results */
+
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
