--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,6 @@
+<!-- This is a base file for html pages -->
+<!-- Here we use jinja2 templating -->
+
 <!doctype html>
 <html>
     <head>
@@ -6,7 +9,7 @@
     </head>
     <body>
         {% block body %}
-
+        <!-- Here will be inserted the body of html pages -->
         {% endblock %}
     </body>
 </html>
